      list.  (Closes: #631711)
    + [NT] Warn about including the CDBS simple-patchsys and dpatch
      as they are both deprecated by source format 3.0 (quilt).
      Thanks to Nelson A. de Oliveira for reporting and Luk Claes
      for providing an initial patch.  (Closes: #624201)
  * checks/symlinks:
    + [NT] Symlink checking extended to relative paths as well.
      (Closes: #217023)

  * data/rules/{deprecated,known}-makefiles:
    + [NT] Added file.
  * data/spelling/corrections:
    + [RA] Remove discontiguous correction.  The OED lists this as valid.
      Thanks, Charles Plessy.  (Closes: #632159)

  * debian/control:
    + [NT] Bumped debhelper version to 8.1.0 due to the build-arch and
      build-indep targets.  Thanks to Mark Hymers for the heads up and
      a patch.  (Closes: #632550)
    + [NT] Added Build-Depends on cdbs, it is needed for some of the
      tests.
  * debian/lintian.install:
    + [NT] Added the profiles directory.
  * debian/rules:
    + [NT] Added target to update the profiles.

  * doc/lintian.xml:
    + [NT] Added information about the new Vendor profiles.

  * frontend/{lintian,lintian-info}:
    + [NT] Added profile support (new option --profile), please
      refer to the Lintian User Manual for more information.
  * frontend/lintian:
    + [NT] Ensure that all dependency collections of a check are
      loaded.  Previously Lintian would only load direct
      dependencies of a collection and assume that was enough.

  * lib/Lintian/Command.pm:
    + [NT] Added support for appending output to files without
      truncating them first via the new out_append and
      err_append options.
  * lib/Lintian/{Internal/FrontendUtil,Profile}.pm:
    + [NT] New files.
  * lib/Lintian/{Tag/Info,Tags}.pm:
    + [NT] Updated for profile support.

  * man/lintian.pod.in:
    + [NT] Documented the new --profile option.  Note that the
      options --suppress-tags{,-from-file} now supresses tags
      in the active profile.